{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 298,
  "lineage": "5c7a4d3a-6fb9-15d9-f117-05d2eb3e30f4",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkSecurityGroups/nsg-kpmgcadwitscore",
            "location": "canadacentral",
            "name": "nsg-kpmgcadwitscore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allowing_https",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/routeTables/rt-KPMG-CA-DWITSCore",
            "location": "canadacentral",
            "name": "rt-KPMG-CA-DWITSCore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "route": [
              {
                "address_prefix": "10.135.28.0/25",
                "name": "route1",
                "next_hop_in_ip_address": "8.8.8.8",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.135.28.0/27",
            "address_prefixes": [
              "10.135.28.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore/subnets/snet-poc",
            "name": "snet-poc",
            "network_security_group_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/networkSecurityGroups/nsg-kpmgcadwitscore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "route_table_id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/routeTables/rt-KPMG-CA-DWITSCore",
            "virtual_network_name": "vnet-KPMG-CA-DWITSCore"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.135.28.0/25"
            ],
            "guid": "15419f28-7464-4e20-907a-d537d1a50046",
            "id": "/subscriptions/09244db3-9e4e-45d7-917e-95d1d2905962/resourceGroups/KPMG-CA-DWSynapsePOC-RG/providers/Microsoft.Network/virtualNetworks/vnet-KPMG-CA-DWITSCore",
            "location": "canadacentral",
            "name": "vnet-KPMG-CA-DWITSCore",
            "resource_group_name": "KPMG-CA-DWSynapsePOC-RG",
            "subnets": [
              "snet-poc"
            ]
          }
        }
      ]
    }
  ]
}